# duckmail-rs

./: Cargo.toml  README.md
src/: config.rs  configdata.rs  configdb.rs  main.rs  network.rs  utils.rs
src/config/: data.rs  db.rs  mod.rs
