[package]
name = "duckmail"
version = "0.1.0"
edition = "2021"
description = "Create and manage email addresses on duckduckgo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
ureq = { version = "2.9.5", features = ["json"] }
prettytable-rs = { version = "0.10.0", default-features = false, features = ["win_crlf"] }
